--- a/model/requirements.txt
+++ b/model/requirements.txt
@@ -1,5 +1,8 @@
 pytest==7.1.1
 redis==4.1.4
 jsonschema==4.16.0
-xgboost==1.7.0
+joblib==1.2.0
+numpy==1.23.4
+pandas==1.5.1
 scikit-learn==1.1.3
+xgboost==1.7.1
