--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,25 @@
 version: "3.2"
 services:
-  api:
-    image: fastapi_api
-    container_name: ml_api
-    build:
-      context: ./api
-      target: build
-    ports:
-      - "80:5000"
-#    environment:
-
-    depends_on:
-      - redis
-      - model
-    volumes:
-      - ./feedback:/src/feedback
+#  api:
+#    image: fastapi_api
+#    container_name: ml_api
+#    build:
+#      context: ./api
+#      target: build
+#    ports:
+#      - "80:5000"
+##    environment:
+#
+#    depends_on:
+#      - redis
+#      - model
+#    volumes:
+#      - ./feedback:/src/feedback
 
   redis:
     image: redis:6.2.6
+    ports:
+      - "6379:6379"
 
   model:
     image: ml_service
