--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -5,4 +5,8 @@ uvicorn==0.19.0
 Jinja2==3.1.2
 python-multipart==0.0.5
 pydantic==1.10.2
+python-jose==3.3.0
+PyPika==0.48.9
+passlib==1.7.4
 requests==2.28.1
+bcrypt==4.0.1
